--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,6 @@
 @import "tailwindcss";
 
 
-#root {
-  max-width: 75dvw;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
-
 /* INIT */
 :root{
   --main-color:rgb(202 138 4);
@@ -18,6 +11,13 @@
   --body-font-family:Arial, Helvetica, sans-serif;
   --bold-weight:700;
   --radius:5px;
+  --container:75dvw;
+}
+
+#root {
+  max-width: var(--container);
+  margin: 0 auto;
+  padding: 2rem;
 }
 
 body {
@@ -25,67 +25,19 @@ body {
   font-size:var(--body-font-size);
   color: var(--black-color);
   background: var(--background);
-  
 }
+
 a {
   text-decoration: none;
 }
 
-/* Specs of Container */
-.datas-container {
-  --table-spacing: 2rem;
-  background: var(--background);
-  color: var(--color-white);
-}
-
-.top {
-  display: flex;
-  align-items: center;
-  padding: var(--table-spacing);
-}
-
-.searching {
-  margin-left:auto;
-}
-
 /* DataTable */
-.data-table{
-  
-  display:flex;
-  flex-direction: column;
-  min-height:50vh;
-  padding:var(--table-spacing);
-}
-
-
 thead th{
-  cursor:pointer
+  cursor:pointer;
 }
-
-.table-row {
-  display:block;
- }
-
- .table-cell,
- .table-label{
-  width:100px;
-  padding:.55rem;
-  text-align: center;
-  color:var(--white-color);
-  font-weight: var(--bold-weight);
- }
 
 
 /* Pagination */
-.pagination{
-  --gap:.75rem;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  margin-inline: 2rem;
-  column-gap: var(--gap);
-}
-
 .pagination-link{
   --sizes:25px;
   --radius:50%;
